# DLToolKit

./: .gitignore  README.md  example.md  helper.sh  main.py  main.yaml  precommit.sh  pyproject.toml  requirements.txt  samdbox.ipynb  sandbox.py  test.ipynb
buildDatasets/: __init__.py  amazon_review_2023.py  data_expolore.ipynb
builds/: __init__.py  amazon_review_2023.py  data_expolore.ipynb
configs/coco/: CLIP_VIT16_COCO_CAPTION.yaml
datasets/: amazon_review_2023.py  data_expolore.ipynb
demos/: blip.ipynb
dltoolkit/: main.py
dltoolkit/config/: cl_img_cls.yaml  img_cls.yaml  kl.yaml
dltoolkit/config/optim/: adam.yaml
dltoolkit/configs/: defaults.py
dltoolkit/datasets/: __init__.py  build.py  cl_dataset.py  coco.py  itp_dataset.py  lm_dataset.py  transform.py  utils.py
dltoolkit/experiments/: kl.py
dltoolkit/models/: CL_model.py  __init__.py  attention.py  build.py  clip_image.py  dummy_model.py  mnist_demo_model.py  optimizer.py  resnet.py
dltoolkit/models/clip/: attention.py  model.py
dltoolkit/trainer/: base_trainer.py  img_cls.py  itm.py  lm.py  utils.py
dltoolkit/trainer/cl_trainer/: cl_cls.py  img_cls.py
dltoolkit/trainer/config/: cl_cls.yaml  cl_img_cls.yaml  img_cls.yaml  itm.yaml  lm.yaml
dltoolkit/trainer/config/distributed/: accelerate.yaml
dltoolkit/utils/: __init__.py  checkpoint.py  distributed.py  logging.py  misc.py  parse.py  strategy.py  utils.py
logs_buffer/cl_img_cls/: events.out.tfevents.1759753891.MarshalldeMacBook-Pro.local.24543.0
logs_no_buffer/cl_img_cls/: events.out.tfevents.1759755954.MarshalldeMacBook-Pro.local.43959.0
models/: MKGAT.py  __init__.py  attention.py  bert.py  blip.py  clip.py  cross_attn.py  utils.py
python/: pyproject.toml
python/dltoolkit/: main.py
python/dltoolkit/configs/: defaults.py
python/dltoolkit/datasets/: coco.py  loader.py  multigrid_helper.py  utils.py
python/dltoolkit/models/: __init__.py  clip_image.py  losses.py  optimizer.py
python/dltoolkit/tools/: train.py
python/dltoolkit/utils/: checkpoint.py  logging.py  meters.py  misc.py  parse.py
script/: prepare_env.py
script/train/: train_clip.sh
tests/models/: transformer.py
tools/: train.py
train/: MKGAT.py
utils/: config.py
wandb/: latest-run
wandb/run-20251007_121854-izjqjknx/: run-izjqjknx.wandb
wandb/run-20251007_122240-xlh3ye8s/: run-xlh3ye8s.wandb
wandb/run-20251007_122430-661iwqrj/: run-661iwqrj.wandb
wandb/run-20251007_122850-a8f5qsh1/: run-a8f5qsh1.wandb
wandb/run-20251007_123229-1do2ji66/: run-1do2ji66.wandb
wandb/run-20251007_123229-1do2ji66/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251007_123515-f69gdsjl/: run-f69gdsjl.wandb
wandb/run-20251007_123549-pl4m3346/: run-pl4m3346.wandb
wandb/run-20251007_123549-pl4m3346/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
(+80 files in other folders)
