[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dltoolkit", "dltoolkit.*"]

[project]
name = "dltoolkit"
version = "0.1.0"
description = "A convenient toolbox for deep learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "deepspeed",
    "einops",
    "fvcore",
    "hydra-core",
    "modelscope",
    "opencv-python",
    "pandas",
    "tensorboard",
    "timm",
    "torch",
    "torchaudio",
    "torchdata",
    "torchvision",
    "transformers",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
#]
#torchvision = [
#  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
#]
#
#[[tool.uv.index]]
#name = "pytorch-cu124"
#url = "https://download.pytorch.org/whl/cu124"
#explicit = true

