[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dltoolkit", "dltoolkit.*"]

[project]
name = "dltoolkit"
version = "1.1.0"
description = "A convenient toolbox for deep learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "deepspeed",
    "einops",
    "fvcore",
    "hydra-core",
    "modelscope",
    "opencv-python",
    "pandas",
    "tensorboard",
    "timm",
    "torch>=2.1.0",
    "torchaudio",
    "torchdata",
    "torchvision",
    "transformers",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
